# cbtc-media-day-app

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/actions/terraform-qa/: action.yml
.github/workflows/: _deploy-infra_global-env.yml  deploy-docs.yml  deploy-infra_api-gateway.yml  deploy-infra_global.yml  deploy-lambda_authorizer.yml  deploy-lambda_content.yml  docs.yml  template_tests-e2e.yml  template_tests-ut.yml
app/src/: index.css
app/src/components/: DocumentIdForm.jsx  DocumentIdForm.test.jsx
docs/: README.md  justfile
docs/architecture/: overview.md
docs/explanation/: README.md  architecture.md  tdd-methodology.md
docs/how-to-guides/: README.md  code-quality.md  running-tests.md
docs/reference/: README.md  ci-cd-pipelines.md  technology-stack.md
docs/tutorials/: README.md  getting-started.md
infra/: justfile  recipes.infra.just
infra/api-gateway/: .releaserc.yaml  apigw.tf  apigw_cors.tf  backend.tf  justfile  outputs.tf  providers.tf  remote_state.tf  variables.tf  versions.tf
infra/bootstrap/: .terraform.lock.hcl  audit.tf  justfile  outputs.tf  s3.tf
infra/global/: .releaserc.yaml  .terraform.lock.hcl  content_bucket.tf  dynamodb.tf  justfile  outputs.tf  s3_content.tf  s3_lambda_sources.tf  signing.tf  variables.tf
infra/services/: .terraform.lock.hcl  content.tf  justfile  outputs.tf  providers.tf
openspec/changes/split-services-infra-stacks/: design.md  proposal.md  tasks.md
openspec/changes/split-services-infra-stacks/specs/api-gateway-infra/: spec.md
openspec/changes/split-services-infra-stacks/specs/authorizer-infra/: spec.md
openspec/changes/split-services-infra-stacks/specs/content-infra/: spec.md
pipelines/: justfile
pipelines/player_data_uploader/src/: main.py
pipelines/player_data_uploader/tests/: test_main.py
pipelines/players_tutors/src/: main.py
pipelines/players_tutors/tests/: test_main.py
services/: justfile  recipes.infra.just  recipes.services.just
services/authorizer/: .releaserc.yaml  build.sh  justfile  pyproject.toml
services/authorizer/infra/: backend.tf  iam.tf  justfile  main.tf  outputs.tf  remote_state.tf  variables.tf
services/authorizer/src/: handler.py
services/content/: .releaserc.yaml  README.md  __init__.py  build.sh  justfile  pyproject.toml
services/content/infra/: .config.tfbackend.example  .terraform.lock.hcl  account_guard.tf  backend.tf  iam.tf  justfile  main.tf  outputs.tf  remote_state.tf  variables.tf  versions.tf
services/content/src/: __init__.py  handler.py
services/content/tests/: test_handler.py
services/content_service/: build.sh
services/content_service/tests/: test_handler.py
tests/functional/: conftest.py
(+1 files in other folders)
