[project]
name = "cbtc-media-day"
version = "0.1.0"
description = "A serverless AWS application built with Python 3.12 and Terraform"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    # Code Quality
    "ruff>=0.14.8",
    "black>=25.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.hatch.build.targets.wheel.force-include]
"tests" = "tests"

[tool.pytest.ini_options]
pythonpath = [".", "services"]
testpaths = ["tests", "services"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".terraform",
    "*.tfstate",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*_test.py" = ["F401", "F811"]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.terraform
  | .*\.tfstate
)/
'''

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.2",
]

[tool.uv.workspace]
members = ["services/*"]
exclude = ["**/__pycache__"]
